tests/snapshots/snapshots__empty_2025.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│                   COMPACT CALENDAR 2025        │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│             ┌─────────┬────────────────────────┤
│W01 January  │ 30   31 │ 01   02   03   04   05 │
│             ├─────────┘                        │
│W02          │ 06   07   08   09   10   11   12 │
│W03          │ 13   14   15   16   17   18   19 │
│W04          │ 20   21   22   23   24   25   26 │
│             │                        ┌─────────┤
│W05 February │ 27   28   29   30   31 │ 01   02 │
│             ├────────────────────────┘         │
│W06          │ 03   04   05   06   07   08   09 │
│W07          │ 10   11   12   13   14   15   16 │
│W08          │ 17   18   19   20   21   22   23 │
│             │                        ┌─────────┤
│W09 March    │ 24   25   26   27   28 │ 01   02 │
│             ├────────────────────────┘         │
│W10          │ 03   04   05   06   07   08   09 │
│W11          │ 10   11   12   13   14   15   16 │
│W12          │ 17   18   19   20   21   22   23 │
│W13          │ 24   25   26   27   28   29   30 │
│             │    ┌─────────────────────────────┤
│W14 April    │ 31 │ 01   02   03   04   05   06 │
│             ├────┘                             │
│W15          │ 07   08   09   10   11   12   13 │
│W16          │ 14   15   16   17   18   19   20 │
│W17          │ 21   22   23   24   25   26   27 │
│             │              ┌───────────────────┤
│W18 May      │ 28   29   30 │ 01   02   03   04 │
│             ├──────────────┘                   │
│W19          │ 05   06   07   08   09   10   11 │
│W20          │ 12   13   14   15   16   17   18 │
│W21          │ 19   20   21   22   23   24   25 │
│             │                             ┌────┤
│W22 June     │ 26   27   28   29   30   31 │ 01 │
│             ├─────────────────────────────┘    │
│W23          │ 02   03   04   05   06   07   08 │
│W24          │ 09   10   11   12   13   14   15 │
│W25          │ 16   17   18   19   20   21   22 │
│W26          │ 23   24   25   26   27   28   29 │
│             │    ┌─────────────────────────────┤
│W27 July     │ 30 │ 01   02   03   04   05   06 │
│             ├────┘                             │
│W28          │ 07   08   09   10   11   12   13 │
│W29          │ 14   15   16   17   18   19   20 │
│W30          │ 21   22   23   24   25   26   27 │
│             │                   ┌──────────────┤
│W31 August   │ 28   29   30   31 │ 01   02   03 │
│             ├───────────────────┘              │
│W32          │ 04   05   06   07   08   09   10 │
│W33          │ 11   12   13   14   15   16   17 │
│W34          │ 18   19   20   21   22   23   24 │
│W35          │ 25   26   27   28   29   30   31 │
│             ├──────────────────────────────────┤
│W36 September│ 01   02   03   04   05   06   07 │
│W37          │ 08   09   10   11   12   13   14 │
│W38          │ 15   16   17   18   19   20   21 │
│W39          │ 22   23   24   25   26   27   28 │
│             │         ┌────────────────────────┤
│W40 October  │ 29   30 │ 01   02   03   04   05 │
│             ├─────────┘                        │
│W41          │ 06   07   08   09   10   11   12 │
│W42          │ 13   14   15   16   17   18   19 │
│W43          │ 20   21   22   23   24   25   26 │
│             │                        ┌─────────┤
│W44 November │ 27   28   29   30   31 │ 01   02 │
│             ├────────────────────────┘         │
│W45          │ 03   04   05   06   07   08   09 │
│W46          │ 10   11   12   13   14   15   16 │
│W47          │ 17   18   19   20   21   22   23 │
│W48          │ 24   25   26   27   28   29   30 │
│             ├──────────────────────────────────┤
│W49 December │ 01   02   03   04   05   06   07 │
│W50          │ 08   09   10   11   12   13   14 │
│W51          │ 15   16   17   18   19   20   21 │
│W52          │ 22   23   24   25   26   27   28 │
│             │              ┌───────────────────┤
│W53 January  │ 29   30   31 │ 01   02   03   04 │
└─────────────┴──────────────┴───────────────────┘
