tests/snapshots/snapshots__simple_2024.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│                   COMPACT CALENDAR 2024        │
├────────────────────────────────────────────────┤
│              Mon  Tue  Wed  Thu  Fri  Sat  Sun │
│W01 January  │ 01   02   03   04   05   06   07 │01/01 to 01/07 - New Year Week
│W02          │ 08   09   10   11   12   13   14 │
│W03          │ 15   16   17   18   19   20   21 │01/15 - MLK Day
│W04          │ 22   23   24   25   26   27   28 │
│             │              ┌───────────────────┤
│W05 February │ 29   30   31 │ 01   02   03   04 │02/01 - Q1 Review Due
│             ├──────────────┘                   │
│W06          │ 05   06   07   08   09   10   11 │02/10 to 02/16 - Sprint Planning
│W07          │ 12   13   14   15   16   17   18 │02/14 - Valentine's Day
│W08          │ 19   20   21   22   23   24   25 │
│             │                   ┌──────────────┤
│W09 March    │ 26   27   28   29 │ 01   02   03 │
│             ├───────────────────┘              │
│W10          │ 04   05   06   07   08   09   10 │
│W11          │ 11   12   13   14   15   16   17 │03/15 - Project Alpha Deadline, 03/17 - St. Patrick's Day
│W12          │ 18   19   20   21   22   23   24 │
│W13          │ 25   26   27   28   29   30   31 │
│             ├──────────────────────────────────┤
│W14 April    │ 01   02   03   04   05   06   07 │04/01 - April Fools
│W15          │ 08   09   10   11   12   13   14 │
│W16          │ 15   16   17   18   19   20   21 │04/15 to 04/30 - Tax Season Crunch
│W17          │ 22   23   24   25   26   27   28 │
│             │         ┌────────────────────────┤
│W18 May      │ 29   30 │ 01   02   03   04   05 │05/05 - Cinco de Mayo
│             ├─────────┘                        │
│W19          │ 06   07   08   09   10   11   12 │
│W20          │ 13   14   15   16   17   18   19 │05/15 - Q2 Planning
│W21          │ 20   21   22   23   24   25   26 │
│             │                        ┌─────────┤
│W22 June     │ 27   28   29   30   31 │ 01   02 │05/27 - Memorial Day
│             ├────────────────────────┘         │
│W23          │ 03   04   05   06   07   08   09 │
│W24          │ 10   11   12   13   14   15   16 │
│W25          │ 17   18   19   20   21   22   23 │06/19 - Juneteenth
│W26          │ 24   25   26   27   28   29   30 │06/30 - Mid-Year Review
│             ├──────────────────────────────────┤
│W27 July     │ 01   02   03   04   05   06   07 │07/04 - Independence Day, 07/01 to 07/04 - Independence Week
│W28          │ 08   09   10   11   12   13   14 │
│W29          │ 15   16   17   18   19   20   21 │
│W30          │ 22   23   24   25   26   27   28 │
│             │              ┌───────────────────┤
│W31 August   │ 29   30   31 │ 01   02   03   04 │08/01 - Product Launch
│             ├──────────────┘                   │
│W32          │ 05   06   07   08   09   10   11 │
│W33          │ 12   13   14   15   16   17   18 │
│W34          │ 19   20   21   22   23   24   25 │
│             │                             ┌────┤
│W35 September│ 26   27   28   29   30   31 │ 01 │09/01 to 09/07 - Labor Day Weekend
│             ├─────────────────────────────┘    │
│W36          │ 02   03   04   05   06   07   08 │09/02 - Labor Day
│W37          │ 09   10   11   12   13   14   15 │09/15 - Q3 Review Due
│W38          │ 16   17   18   19   20   21   22 │
│W39          │ 23   24   25   26   27   28   29 │
│             │    ┌─────────────────────────────┤
│W40 October  │ 30 │ 01   02   03   04   05   06 │
│             ├────┘                             │
│W41          │ 07   08   09   10   11   12   13 │
│W42          │ 14   15   16   17   18   19   20 │10/15 - Budget Proposal Due
│W43          │ 21   22   23   24   25   26   27 │
│             │                   ┌──────────────┤
│W44 November │ 28   29   30   31 │ 01   02   03 │10/31 - Halloween, 11/01 - Annual Report Draft
│             ├───────────────────┘              │
│W45          │ 04   05   06   07   08   09   10 │
│W46          │ 11   12   13   14   15   16   17 │11/11 - Veterans Day
│W47          │ 18   19   20   21   22   23   24 │11/20 to 11/30 - Thanksgiving Break
│             │                             ┌────┤
│W48 December │ 25   26   27   28   29   30 │ 01 │11/28 - Thanksgiving
│             ├─────────────────────────────┘    │
│W49          │ 02   03   04   05   06   07   08 │
│W50          │ 09   10   11   12   13   14   15 │12/15 - Year-End Review
│W51          │ 16   17   18   19   20   21   22 │12/20 to 12/31 - Holiday Break
│W52          │ 23   24   25   26   27   28   29 │12/25 - Christmas
│             │         ┌────────────────────────┤
│W53 January  │ 30   31 │ 01   02   03   04   05 │12/31 - New Year's Eve
└─────────────┴─────────┴────────────────────────┘
