tests/snapshots/snapshots__sunday_start_2024.snap
---
source: tests/snapshots.rs
expression: output
snapshot_kind: text
---
┌────────────────────────────────────────────────┐
│                   COMPACT CALENDAR 2024        │
├────────────────────────────────────────────────┤
│              Sun  Mon  Tue  Wed  Thu  Fri  Sat │
│             ┌────┬─────────────────────────────┤
│W01 January  │ 31 │ 01   02   03   04   05   06 │01/01 to 01/07 - New Year Week
│             ├────┘                             │
│W02          │ 07   08   09   10   11   12   13 │
│W03          │ 14   15   16   17   18   19   20 │01/15 - MLK Day
│W04          │ 21   22   23   24   25   26   27 │
│             │                   ┌──────────────┤
│W05 February │ 28   29   30   31 │ 01   02   03 │02/01 - Q1 Review Due
│             ├───────────────────┘              │
│W06          │ 04   05   06   07   08   09   10 │02/10 to 02/16 - Sprint Planning
│W07          │ 11   12   13   14   15   16   17 │02/14 - Valentine's Day
│W08          │ 18   19   20   21   22   23   24 │
│             │                        ┌─────────┤
│W09 March    │ 25   26   27   28   29 │ 01   02 │
│             ├────────────────────────┘         │
│W10          │ 03   04   05   06   07   08   09 │
│W11          │ 10   11   12   13   14   15   16 │03/15 - Project Alpha Deadline
│W12          │ 17   18   19   20   21   22   23 │03/17 - St. Patrick's Day
│W13          │ 24   25   26   27   28   29   30 │
│             │    ┌─────────────────────────────┤
│W14 April    │ 31 │ 01   02   03   04   05   06 │04/01 - April Fools
│             ├────┘                             │
│W15          │ 07   08   09   10   11   12   13 │
│W16          │ 14   15   16   17   18   19   20 │04/15 to 04/30 - Tax Season Crunch
│W17          │ 21   22   23   24   25   26   27 │
│             │              ┌───────────────────┤
│W18 May      │ 28   29   30 │ 01   02   03   04 │
│             ├──────────────┘                   │
│W19          │ 05   06   07   08   09   10   11 │05/05 - Cinco de Mayo
│W20          │ 12   13   14   15   16   17   18 │05/15 - Q2 Planning
│W21          │ 19   20   21   22   23   24   25 │
│             │                             ┌────┤
│W22 June     │ 26   27   28   29   30   31 │ 01 │05/27 - Memorial Day
│             ├─────────────────────────────┘    │
│W23          │ 02   03   04   05   06   07   08 │
│W24          │ 09   10   11   12   13   14   15 │
│W25          │ 16   17   18   19   20   21   22 │06/19 - Juneteenth
│W26          │ 23   24   25   26   27   28   29 │
│             │    ┌─────────────────────────────┤
│W27 July     │ 30 │ 01   02   03   04   05   06 │06/30 - Mid-Year Review, 07/04 - Independence Day, 07/01 to 07/04 - Independence Week
│             ├────┘                             │
│W28          │ 07   08   09   10   11   12   13 │
│W29          │ 14   15   16   17   18   19   20 │
│W30          │ 21   22   23   24   25   26   27 │
│             │                   ┌──────────────┤
│W31 August   │ 28   29   30   31 │ 01   02   03 │08/01 - Product Launch
│             ├───────────────────┘              │
│W32          │ 04   05   06   07   08   09   10 │
│W33          │ 11   12   13   14   15   16   17 │
│W34          │ 18   19   20   21   22   23   24 │
│W35          │ 25   26   27   28   29   30   31 │
│             ├──────────────────────────────────┤
│W36 September│ 01   02   03   04   05   06   07 │09/02 - Labor Day, 09/01 to 09/07 - Labor Day Weekend
│W37          │ 08   09   10   11   12   13   14 │
│W38          │ 15   16   17   18   19   20   21 │09/15 - Q3 Review Due
│W39          │ 22   23   24   25   26   27   28 │
│             │         ┌────────────────────────┤
│W40 October  │ 29   30 │ 01   02   03   04   05 │
│             ├─────────┘                        │
│W41          │ 06   07   08   09   10   11   12 │
│W42          │ 13   14   15   16   17   18   19 │10/15 - Budget Proposal Due
│W43          │ 20   21   22   23   24   25   26 │
│             │                        ┌─────────┤
│W44 November │ 27   28   29   30   31 │ 01   02 │10/31 - Halloween, 11/01 - Annual Report Draft
│             ├────────────────────────┘         │
│W45          │ 03   04   05   06   07   08   09 │
│W46          │ 10   11   12   13   14   15   16 │11/11 - Veterans Day
│W47          │ 17   18   19   20   21   22   23 │11/20 to 11/30 - Thanksgiving Break
│W48          │ 24   25   26   27   28   29   30 │11/28 - Thanksgiving
│             ├──────────────────────────────────┤
│W49 December │ 01   02   03   04   05   06   07 │
│W50          │ 08   09   10   11   12   13   14 │
│W51          │ 15   16   17   18   19   20   21 │12/15 - Year-End Review, 12/20 to 12/31 - Holiday Break
│W52          │ 22   23   24   25   26   27   28 │12/25 - Christmas
│             │              ┌───────────────────┤
│W53 January  │ 29   30   31 │ 01   02   03   04 │12/31 - New Year's Eve
└─────────────┴──────────────┴───────────────────┘
